fixed the resolvers and taskSeeds.json

--- a/server/seeders/taskSeeds.json
+++ b/server/seeders/taskSeeds.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Task 1",
+    "title": "Task 1",
     "description": "Description of Task 1",
     "status": "Pending",
     "dueDate": "2024-04-01",
